add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang ='en'>
     <head>
         <title>C&D Album Design</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Wedding Album Design</h1>
